# whirr

./: .gitignore  CHANGES.MD  README.md  interface_config.json  pyproject.toml  requirements.txt
assets/: logo.txt
logs/: benchmark.prof  model.log.jsonl
models/: whirr-1-1.2b.keras  whirr-1-1.2b.onnx
src/: __init__.py  audio_capture.py  broker.py  capture.py  collect.py  config.py  control.py  inference.py  interface_config.json  interface_config.py  log_config.json  log_formatter.py  logger.py  logger_module.py  main.py  performance_module.py  process_channel.py
src/utils/: configure_mics.py  convert_model.py  draw_logo.py  interface_config.json  preprocess_audio.py
src/whirr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: final_test.py  final_verification.py  simple_collector_test.py  test_broker_integration.py  test_collector_simple.py  test_inference.py  test_logger.py
